# noise-cancellation

./: .gitignore  LICENSE  Makefile  README.md  app.py  download_models.py  pyproject.toml  requirements.txt  setup.py
core/: media.py  pipeline.py
engines/: demucs.py  rnnoise.py  spectral_gate.py
tests/: test_engines.py  test_utils.py
ui/: animated_widgets.py  batch_processor.py  file_list.py  gradient_background.py  icon_provider.py  log_viewer.py  main_window.py  modern_styles.py  preferences_dialog.py  preview_panel.py  settings_panel.py
utils/: logging_setup.py  paths.py  profiles.py  validators.py
