[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noise-cancellation-app"
version = "1.0.0"
description = "Professional desktop application for removing background noise from audio and video files"
authors = [{name = "Noise Cancellation Team"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "PySide6>=6.5.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.1",
    "librosa>=0.10.1",
    "noisereduce>=3.0.0",
    "ffmpeg-python>=0.2.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "pyloudnorm>=0.1.1",
    "pathlib>=1.0.1",
    "typing-extensions>=4.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
noise-cancellation = "app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true